lexer.cpp, lexer.hpp からliblexer.a を作るように設定

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,7 @@
+AM_CXXFLAGS = -O2 -std=c++11
+
 bin_PROGRAMS = klang
 klang_SOURCES = main.cpp
-klang__CXXFLAGS = -std=c++11
+
+lib_LIBRARIES = liblexer.a
+liblexer_a_SOURCES = lexer.cpp lexer.hpp
