--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: cpp
 compiler:
-  - gcc
+  - gcc-4.8
   - clang
 before_install:
   - sudo apt-get -y update
 install:
   - sudo apt-get install -qq gnulib #stdbool.m4 is required for AC_CHECK_HEADER_STDBOOL in configure.ac
+  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install g++-4.8
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - $CXX --version
   - ACLOCAL_ARGS="-I/usr/share/gnulib/m4" ./autogen.sh
   - ./configure
   - make
