不要なものがシステムにinstall されないように変更

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
 AM_CXXFLAGS = -O2 -std=c++11 -I../src
 
-lib_LIBRARIES = libhelperlexer.a
+noinst_LIBRARIES = libhelperlexer.a
 libhelperlexer_a_SOURCES = helper_lexer.cpp helper_lexer.hpp
