--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,5 +3,5 @@ AM_CXXFLAGS = -O2 -std=c++11
 bin_PROGRAMS = klang
 klang_SOURCES = main.cpp
 
-lib_LIBRARIES = liblexer.a
+noinst_LIBRARIES = liblexer.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
