--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,7 @@ libhelperlexer_a_SOURCES = helper_lexer.cpp helper_lexer.hpp
 libgtest_all_a_SOURCES = $(GTEST_DIR)/gtest-all.cc $(GTEST_DIR)/gtest.h
 
 TESTS = test_nothing test_sample1
-noinst_PROGRAMS = $(TESTS)
+check_PROGRAMS = $(TESTS)
 test_nothing_SOURCES = test_nothing.cpp # not using gtest
 test_sample1_SOURCES = test_sample1.cpp $(GTEST_DIR)/gtest.h # using gtest
 test_sample1_LDADD = libgtest-all.a
