--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,9 +5,13 @@ AM_CXXFLAGS = -O2 -std=c++11 -Wall -Wextra -I../src $(GTEST_FLAGS)
 check_LIBRARIES = libhelperlexer.a libgtest-all.a
 libhelperlexer_a_SOURCES = helper_lexer.cpp helper_lexer.hpp
 libgtest_all_a_SOURCES = $(GTEST_DIR)/gtest-all.cc $(GTEST_DIR)/gtest.h
+libgtest_all_a_LIBADD = ../src/lexer.o
 
-TESTS = test_nothing test_sample1
+TESTS = test_nothing test_sample1 test_lexer
 check_PROGRAMS = $(TESTS)
 test_nothing_SOURCES = test_nothing.cpp # not using gtest
 test_sample1_SOURCES = test_sample1.cpp $(GTEST_DIR)/gtest.h # using gtest
 test_sample1_LDADD = libgtest-all.a
+
+test_lexer_SOURCES = test_lexer.cpp $(GTEST_DIR)/gtest.h # using gtest
+test_lexer_LDADD = libgtest-all.a libhelperlexer.a
