--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,5 +3,6 @@ AM_CXXFLAGS = -O2 -std=c++11 -Wall -Wextra
 bin_PROGRAMS = klang
 klang_SOURCES = main.cpp
 
-noinst_LIBRARIES = liblexer.a
+noinst_LIBRARIES = liblexer.a libastdata.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
+libastdata_a_SOURCES =  ast.hpp ast_data.cpp ast_data.hpp
