astのインターフェースのデストラクタを実装

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,4 +5,4 @@ klang_SOURCES = main.cpp
 
 noinst_LIBRARIES = liblexer.a libastdata.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
-libastdata_a_SOURCES = memory.hpp ast.hpp ast_data.cpp ast_data.hpp
+libastdata_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.cpp ast_data.hpp
