パーサー用のテストを作成

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,5 +5,5 @@ klang_SOURCES = main.cpp
 
 noinst_LIBRARIES = liblexer.a libastdata.a libparser.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
-libastdata_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.cpp ast_data.hpp
-libparser_a_SOURCES = ast_data.hpp parser.cpp parser.hpp
+libastdata_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.hpp ast_data.cpp
+libparser_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.hpp ast_data.cpp parser.hpp parser.cpp
