--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,7 +8,8 @@ libgtest_all_a_SOURCES = $(GTEST_DIR)/gtest-all.cc $(GTEST_DIR)/gtest.h
 
 GTEST_FILES = helper_test_main.cpp $(GTEST_DIR)/gtest.h
 
-TESTS = test_nothing test_sample1 test_lexer
+TESTS = test_nothing test_sample1 test_lexer test_lexer_fail
+XFAIL_TESTS = test_lexer_fail
 
 check_PROGRAMS = $(TESTS)
 test_nothing_SOURCES = test_nothing.cpp # not using gtest
@@ -17,3 +18,5 @@ test_sample1_LDADD = libgtest-all.a
 
 test_lexer_SOURCES = test_lexer.cpp $(GTEST_FILES)
 test_lexer_LDADD = $(check_LIBRARIES) ../src/liblexer.a
+test_lexer_fail_SOURCES = test_lexer_fail.cpp $(GTEST_FILES)
+test_lexer_fail_LDADD = $(check_LIBRARIES) ../src/liblexer.a
