--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,6 +5,7 @@ AM_CXXFLAGS = -O2 -std=c++11 -Wall -Wextra -I../src $(GTEST_FLAGS)
 check_LIBRARIES = libhelperlexer.a libgtest-all.a
 libhelperlexer_a_SOURCES = helper_lexer.hpp helper_lexer.cpp
 libgtest_all_a_SOURCES = $(GTEST_DIR)/gtest-all.cc $(GTEST_DIR)/gtest.h
+libgtest_all_a_CXXFLAGS = -O2 -std=c++11 -I../src $(GTEST_FLAGS)
 
 GTEST_FILES = helper_test_main.cpp $(GTEST_DIR)/gtest.h
 
