--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ compiler:
   - gcc-4.8
   - clang
 before_install:
+  - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.4 main' >> /etc/apt/sources.list"
+  - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
+  - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get -qq update
 install:
   - sudo apt-get install -qq gnulib #stdbool.m4 is required for AC_CHECK_HEADER_STDBOOL in configure.ac
+  - sudo apt-get install -qq autoconf-archive #ax_with_curses.m4 is require for AC_WITH_CURSES
+  - sudo apt-get install -qq libllvm3.4 llvm-3.4 llvm-3.4-dev llvm-3.4-runtime
   - sudo apt-get install -qq libboost-dev
   - if [ "$CXX" = "g++" ]; then
        sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test;
