--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,11 @@
 AM_CXXFLAGS = -O2 -std=c++11 -Wall -Wextra @LLVM_CPPFLAGS@
 
-LDADD = @LLVM_LDFLAGS@ @CURSES_LIB@
+LIBS = -lc++ @LLVM_LIBS@ @CURSES_LIB@
 
 bin_PROGRAMS = klang
 klang_SOURCES = main.cpp
-klang_LDADD = -L./ -lcodegen -lc++ @LLVM_LDFLAGS@ @CURSES_LIB@
+klang_LDFLAGS = @LLVM_LDFLAGS@
+klang_LDADD = -L./ -lcodegen
 
 noinst_LIBRARIES = liblexer.a libastdata.a libparser.a libcodegen.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
