--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
     fi
   - $CXX --version
   - ACLOCAL_ARGS="-I/usr/share/gnulib/m4" ./autogen.sh
-  - whitch llvm-config-3.4
+  - which llvm-config-3.4 || which llvm-config
   - llvm-config --cxxflags
   - llvm-config --ldflags
   - llvm-config --libs codegen
