--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - echo "#include <llvm/IR/Module.h>" > payo.cpp
   - echo "#include <llvm/IR/LLVMContext.h>" >> payo.cpp
   - echo "int main() { llvm::Module *M= new llvm::Module(\"test\", llvm::getGlobalContext()); return 0; }" >> payo.cpp
-  - $CXX -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs` -lc++ -lncurses
+  - $CXX -v -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs` -lc++ -lncurses
   - ./conftest
   - ./configure
   - make
