--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
 install:
   - sudo apt-get install -qq gnulib #stdbool.m4 is required for AC_CHECK_HEADER_STDBOOL in configure.ac
   - sudo apt-get install -qq autoconf-archive #ax_with_curses.m4 is require for AC_WITH_CURSES
-  - sudo apt-get install -qq libllvm3.4 llvm-3.4 llvm-3.4-dev llvm-3.4-runtime libc++-dev
+  - sudo apt-get install -qq libllvm3.4 llvm-3.4 llvm-3.4-dev llvm-3.4-runtime 
+  - sudo apt-get install -y libc++-dev
   - sudo apt-get install -qq libboost-dev
   - sudo ln -s /usr/bin/llvm-config-3.4 /usr/bin/llvm-config
   - if [ "$CXX" = "g++" ]; then
