--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,14 @@ before_install:
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main' >> /etc/apt/sources.list"
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
+  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq install clang-3.5
   - sudo apt-get -qq update
 install:
   - sudo apt-get install -qq gnulib #stdbool.m4 is required for AC_CHECK_HEADER_STDBOOL in configure.ac
   - sudo apt-get install -qq autoconf-archive #ax_with_curses.m4 is require for AC_WITH_CURSES
-  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get install -y libllvm3.5 llvm-3.5 llvm-3.5-dev llvm-3.5-runtime 
-  - sudo apt-get install -y libc++-dev
-  - sudo apt-get install -qq libboost-dev
   - sudo ln -s /usr/bin/llvm-config-3.5 /usr/bin/llvm-config
   - if [ "$CXX" = "g++" ]; then
        sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test;
@@ -33,7 +31,7 @@ install:
   - echo "#include <llvm/IR/LLVMContext.h>" >> payo.cpp
   - echo "int main() { llvm::Module *M= new llvm::Module(\"test\", llvm::getGlobalContext()); return 0; }" >> payo.cpp
   - echo $CXX
-  - $CXX -v -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs` -lncurses
+  - $CXX -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs` -lncurses
   - ./conftest
   - ./configure
   - make
