--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - $CXX --version
   - ACLOCAL_ARGS="-I/usr/share/gnulib/m4" ./autogen.sh
   - ls /usr/share/gnulib/m4
+  - cat m4/ax_llvm.m4
   - which llvm-config-3.4 || which llvm-config
   - llvm-config --cxxflags
   - llvm-config --ldflags
