--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,6 +2,8 @@ GTEST_DIR = gtest
 GTEST_FLAGS = -I $(GTEST_DIR) -pthread -isystem
 AM_CXXFLAGS = -O2 -std=c++11 -Wall -Wextra -I../src $(GTEST_FLAGS)
 
+LIB = ""
+
 check_LIBRARIES = libhelperlexer.a libgtest-all.a
 libhelperlexer_a_SOURCES = helper_lexer.hpp helper_lexer.cpp
 libgtest_all_a_SOURCES = $(GTEST_DIR)/gtest-all.cc $(GTEST_DIR)/gtest.h
