--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,12 @@ install:
        export CXX="g++-4.8";
     fi
   - $CXX --version
+  - echo "#include <llvm/IR/Module.h>" > payo.cpp
+  - echo "#include <llvm/IR/LLVMContext.h>" >> payo.cpp
+  - echo "int main() { llvm::Module *M= new llvm::Module(\"test\", llvm::getGlobalContext()); return 0; }" >> payo.cpp
+  - cat payo.cpp
+  - echo $CXX
+  - $CXX -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs` -lncurses -lpthread -ldl
   - ACLOCAL_ARGS="-Im4 -I/usr/share/gnulib/m4" ./autogen.sh
   - ./configure
   - make
