--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
   - sudo apt-get install -qq gnulib #stdbool.m4 is required for AC_CHECK_HEADER_STDBOOL in configure.ac
   - sudo apt-get install -qq autoconf-archive #ax_with_curses.m4 is require for AC_WITH_CURSES
-  - sudo apt-get install -qq libllvm3.5 llvm-3.5 llvm-3.5-dev llvm-3.5-runtime
+  - sudo apt-get install -qq libllvm3.5 llvm-3.5 llvm-3.5-dev llvm-3.5-runtime clang-3.5
   - sudo ln -s /usr/bin/llvm-config-3.5 /usr/bin/llvm-config
   - if [ "$CXX" = "g++" ]; then
        sudo apt-get -qq install g++-4.8;
@@ -24,8 +24,8 @@ install:
   - cat payo.cpp
   - echo $CXX
   - $CXX -o conftest `llvm-config --cxxflags` `llvm-config --ldflags` payo.cpp `llvm-config --libs codegen` -lncurses -lpthread -ldl
-  - ls /usr/local/clang-3.4/lib
-  - ls /usr/local/clang-3.5/lib
+  - ls /usr/local/clang-3.4/lib || true
+  - ls /usr/local/clang-3.5/lib || true
   - ACLOCAL_ARGS="-Im4 -I/usr/share/gnulib/m4" ./autogen.sh
   - ./configure
   - make
