--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,9 +5,10 @@ LIBS = @LLVM_LIBS@ @CURSES_LIB@
 bin_PROGRAMS = klang
 klang_SOURCES = main.cpp
 klang_LDFLAGS = @LLVM_LDFLAGS@
-klang_LDADD = liblexer.a libparser.a
+klang_LDADD = liblexer.a libparser.a libcodegen.a
 
-noinst_LIBRARIES = liblexer.a libastdata.a libparser.a
+noinst_LIBRARIES = liblexer.a libastdata.a libparser.a libcodegen.a
 liblexer_a_SOURCES = lexer.cpp lexer.hpp
 libastdata_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.hpp ast_data.cpp
 libparser_a_SOURCES = memory.hpp ast.hpp ast.cpp ast_data.hpp ast_data.cpp parser.hpp parser.cpp
+libcodegen_a_SOURCES = memory.hpp ast.hpp ast_data.hpp parser.hpp codegen.hpp codegen.cpp
